Revision history for Perl distribution libnet

3.03 Development

    - Added optional Changes testing (skipped unless AUTHOR_TESTING).

    - Reformatted Changes file as per CPAN::Changes::Spec.

3.02 2014-10-10

    - Don't run interactive prompt() in Makefile.PL when in PERL_CORE.

    - Fix $smtp->auth($sasl) to try the AUTH mechanism (if present) in the
      Authen::SASL object before falling back on other mechanisms.  [CPAN
      RT#99415]

3.01 2014-10-09

    - Require IO::Socket::SSL >= 1.999 to protect against a bad version (0.30)
      of IO::Socket::IP and hopefully fix another bunch of CPAN Testers
      failures.

3.00 2014-10-09

    - Skip Perl Critic, Pod and Pod Coverage tests unless AUTHOR_TESTING.  [CPAN
      RT#99399]

    - Synchronize all $VERSIONs to the distribution's version number, bumping
      that to 3.00 so that no $VERSIONs end up going backwards.

1.30 2014-10-08

    - Sigh. Fix PAUSE indexing problem again. Net::SMTP::SSL is already used by
      Net-SMTP-SSL.

1.29 2014-10-08

    - Fix PAUSE indexing problem. Net::POP3::_SSLified and Net::SMTP::_SSLified
      are already used by Net-SSLGlue.

1.28 2014-10-08

    - Improve code()/message() initialization and error handling in Net::Cmd.
      [Tom Metro, CPAN RT#14875]

    - Don't use the ALLO command on FTP servers that don't support it.  [CPAN
      RT#95717]

    - Stop Makefile.PL from requiring interactive configuration when running via
      cpan, cpanp or cpanm: just accept all defaults in these cases, as when
      running non-interactively.  [CPAN RT#48966]

    - Add optional POD coverage testing.

    - Add optional POD testing.

    - Add optional Perl::Critic testing.

    - Make code Perl::Critic clean.

    - Move Net/*.pm into lib/Net/ sub-directory within distribution.  This is
      the usual layout style these days.

    - Change Net::SMTP::auth() so that it now falls back to another supported